--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pwd generator</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div>
@@ -19,6 +19,6 @@
 
 
     </div>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
